--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   firebase_ui_firestore: ^1.5.6
   cached_network_image: ^3.3.0
   url_launcher: ^6.1.14
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
