--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   cached_network_image: ^3.3.0
   url_launcher: ^6.1.14
   flutter_rating_bar: ^4.0.1
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
